--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2149,7 +2149,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
           }
         }
 
-        div:last-child {
+        > div:last-child {
           display: inline-block;
           position: absolute;
           top: 7px;
