Fix display of social icons

--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2164,6 +2164,10 @@ html.js fieldset.collapsible div.fieldset-wrapper {
               height: 25px;
             }
           }
+
+          @include breakpoint(506px) {
+            display: none;
+          }
         }
       }
 
