--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2195,11 +2195,9 @@ html.js fieldset.collapsible div.fieldset-wrapper {
         width: auto;
         margin-right: 1em;
 
-        .pane-current-12 {
-          display: none;
-        }
-
-        > div:nth-child(2) {
+        .pane-current-12,
+        > div:nth-child(2),
+        > div:nth-child(3) {
           display: none;
         }
       }
@@ -2219,7 +2217,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
               display: none;
             }
           }
-          
+
           > div:nth-child(3) {
             width: auto;
             .widgets-element {
