Hide mid column language switch above 505px

--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2139,12 +2139,17 @@ html.js fieldset.collapsible div.fieldset-wrapper {
           top: 7px;
           right: 92px;
           width: auto;
+          display: block;
 
           .language-icon:before {
             width: 25px;
             height: 25px;
           }
           .language-text {
+            display: none;
+          }
+
+          @include breakpoint(506px) {
             display: none;
           }
         }
