Fix display of social icons above 506px

--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2225,6 +2225,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
 
           > div:nth-child(3) {
             width: auto;
+            display: inline-block;
             .widgets-element {
               display: inline-block;
               margin-right: 5px;
