--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3330,8 +3330,6 @@ form#user-login, form#user-pass {
     .pane-news-test-panel-pane-6,
     .pane-press-releases-test-panel-pane-6,
     .pane-panopoly-faq-panel-pane-4 {
-      background: url(../images/banner.jpg) center center;
-        background-size: cover;
         margin: 0 0 1em 0;
         height: 100%;
     }
@@ -3352,7 +3350,7 @@ form#user-login, form#user-pass {
             flex: 1 100%;
             padding: 0.5em;
             margin: 0.5em;
-            border: 2px solid #689a04;
+            border: 1px solid #cccccc;
             border-radius: 5px;
             background-color: #f5f5f5;
             font-size: 14px;
@@ -3455,7 +3453,6 @@ form#user-login, form#user-pass {
     .main-display .view-content {
       display: flex;
       flex-flow: row wrap;
-      background-color: #689a04;
       justify-content: center;
 
       .views-row {
