--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3313,12 +3313,12 @@ form#user-login, form#user-pass {
         margin-top: 0;
       }
 
-      div:nth-child(2) {
+      > div:nth-child(2) {
         @include breakpoint(600px 905px) {
           display: none;
         }
       }
-      div:nth-child(3) {
+      > div:nth-child(3) {
         display: none;
         @include breakpoint(600px 905px) {
           display: block;
