--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -323,8 +323,10 @@ div#toolbar div.toolbar-shortcuts ul {
   background: none;
 
   .page-title {
-    font-size: 2em;
+    font-size: 2rem;
     margin: 0;
+    font-weight: bolder;
+    line-height: 1.2;
   }
 }
 
