--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -3137,6 +3137,171 @@ form#user-login, form#user-pass {
   .blog-type-page .field-name-field-call-to-action a {
     color: white; }
 
+.node-type-article-post .field--name-field-featured-image,
+.node-type-panopoly-news-article .field--name-field-featured-image,
+.node-type-panopoly-faq .field--name-field-featured-image {
+  width: 100%; }
+  @media (min-width: 481px) {
+    .node-type-article-post .field--name-field-featured-image,
+    .node-type-panopoly-news-article .field--name-field-featured-image,
+    .node-type-panopoly-faq .field--name-field-featured-image {
+      margin: 0 1em 1em 0;
+      width: 50%;
+      float: left; } }
+  .node-type-article-post .field--name-field-featured-image img,
+  .node-type-panopoly-news-article .field--name-field-featured-image img,
+  .node-type-panopoly-faq .field--name-field-featured-image img {
+    max-width: 100%;
+    min-width: 0;
+    height: auto;
+    width: 100%; }
+
+.node-type-article-post .field--name-field-categories,
+.node-type-panopoly-news-article .field--name-field-categories,
+.node-type-panopoly-faq .field--name-field-categories {
+  margin-top: 1em;
+  font-weight: bold; }
+
+.node-type-article-post .row,
+.node-type-panopoly-news-article .row,
+.node-type-panopoly-faq .row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap; }
+
+.node-type-article-post .radix-layouts-content,
+.node-type-panopoly-news-article .radix-layouts-content,
+.node-type-panopoly-faq .radix-layouts-content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 500px;
+          flex: 1 1 500px;
+  padding-right: 0; }
+  @media (min-width: 848px) {
+    .node-type-article-post .radix-layouts-content,
+    .node-type-panopoly-news-article .radix-layouts-content,
+    .node-type-panopoly-faq .radix-layouts-content {
+      min-width: 500px;
+      padding-right: 15px; } }
+
+.node-type-article-post .radix-layouts-sidebar,
+.node-type-panopoly-news-article .radix-layouts-sidebar,
+.node-type-panopoly-faq .radix-layouts-sidebar {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 300px;
+          flex: 1 300px;
+  min-width: 300px;
+  padding-left: 0; }
+  @media (min-width: 848px) {
+    .node-type-article-post .radix-layouts-sidebar,
+    .node-type-panopoly-news-article .radix-layouts-sidebar,
+    .node-type-panopoly-faq .radix-layouts-sidebar {
+      -webkit-box-flex: 0;
+          -ms-flex: 0 300px;
+              flex: 0 300px;
+      padding-left: 15px; } }
+
+.node-type-press-release.panelized-node #content {
+  margin-right: 1%;
+  margin-left: 1%; }
+
+.node-type-press-release.panelized-node .panel-col-mid {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 500px;
+          flex: 1 1 500px; }
+
+@media (min-width: 1024px) {
+  .node-type-press-release.panelized-node .panel-col-right {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 300px;
+            flex: 0 300px;
+    min-width: 300px; } }
+
+.node-type-press-release.panelized-node .panel-col-right div:first-child .panel-pane {
+  margin-top: 0; }
+
+.node-type-press-release.panelized-node h1.page-title {
+  text-align: center; }
+
+.node-type-press-release.panelized-node .content-main {
+  max-width: 960px;
+  background: #FFF;
+  margin: 0 auto 40px auto;
+  position: relative;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+          box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+  padding: 5%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
+  .node-type-press-release.panelized-node .content-main:before, .node-type-press-release.panelized-node .content-main:after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
+    top: 50%;
+    bottom: 0;
+    left: 10px;
+    right: 10px;
+    border-radius: 100px / 10px; }
+
+.node-type-press-release.panelized-node .pane-node-field-immediate-release h4,
+.node-type-press-release.panelized-node .contact-title h4 {
+  margin: 0; }
+
+.node-type-press-release.panelized-node .field--name-field-pr-about {
+  margin: 2em 0; }
+
+.node-type-press-release.panelized-node .field--name-field-full-contact-details {
+  margin: 2em 0;
+  text-align: center; }
+  .node-type-press-release.panelized-node .field--name-field-full-contact-details h4 {
+    margin: 0;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex; }
+    .node-type-press-release.panelized-node .field--name-field-full-contact-details h4:after {
+      content: '\00a0'; }
+
+.node-type-press-release.panelized-node .field--name-field-upload-document {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+
+.node-type-press-release.panelized-node .field--name-field-featured-image {
+  width: 100%; }
+  @media (min-width: 481px) {
+    .node-type-press-release.panelized-node .field--name-field-featured-image {
+      margin: 0 1em 1em 0;
+      width: 50%;
+      float: left; } }
+  .node-type-press-release.panelized-node .field--name-field-featured-image img {
+    width: 100%;
+    max-width: 100%;
+    height: auto; }
+
+.node-type-press-release.panelized-node .field--name-field-categories {
+  font-weight: bold;
+  text-align: center; }
+  .node-type-press-release.panelized-node .field--name-field-categories .field__label, .node-type-press-release.panelized-node .field--name-field-categories .field__items {
+    display: inline-block;
+    float: none; }
+
+.node-type-press-release.panelized-node .pane-node-title h1 {
+  line-height: 1.5;
+  text-align: center; }
+
+.node-type-press-release.panelized-node .pane-node-links {
+  text-align: center; }
+  .node-type-press-release.panelized-node .pane-node-links .links {
+    display: inline-block; }
+
 /********** OPPA SPANISH STYLE **********/
 @media (min-width: 680px) {
   body.i18n-es .pane-superfish-1 #superfish-1 li a {
