--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3124,7 +3124,7 @@ form#user-login, form#user-pass {
 
   .views-slideshow-controls-top {
     position: absolute;
-    top: 7px;
+    top: 21px;
     width: 100%;
     text-align: center;
     z-index: 10;
@@ -3273,7 +3273,7 @@ form#user-login, form#user-pass {
         }
       }
 
-      div:first-child {
+      > div:first-child {
         margin-top: 0;
       }
     }
