Remove margin on Card cycles for a more even spacing

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -2801,7 +2801,8 @@ form#user-login, form#user-pass {
 
 .view-card-cycles .views-slideshow-cycle-main-frame-row-item {
   padding-top: 2em;
-  text-align: center; }
+  text-align: center;
+  margin: 0; }
 
 .view-card-cycles div.field-type-asin {
   border: 0px; }
