--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3138,6 +3138,7 @@ form#user-login, form#user-pass {
   .views-slideshow-cycle-main-frame-row-item {
     padding-top: 2em;
     text-align: center;
+    margin: 0;
   }
 
   div.field-type-asin {
