--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -2782,6 +2782,24 @@ form#user-login, form#user-pass {
   line-height: 1;
   margin-top: 0.7em; }
 
+.field-name-field-call-to-action {
+  background-color: #77BBCD;
+  border-color: #73b5c5;
+  color: white;
+  cursor: pointer;
+  padding: 3px 10px;
+  font-size: 13px;
+  text-align: center;
+  font-weight: normal;
+  border-width: 1px;
+  border-style: solid;
+  display: inline-block;
+  border-radius: 3px;
+  -webkit-box-shadow: #ddd 0 1px 1px;
+          box-shadow: #ddd 0 1px 1px; }
+  .field-name-field-call-to-action a {
+    color: white; }
+
 .view-card-cycles .vscc-controls {
   text-align: center; }
 
@@ -2790,7 +2808,7 @@ form#user-login, form#user-pass {
 
 .view-card-cycles .views-slideshow-controls-top {
   position: absolute;
-  top: 21px;
+  top: 7px;
   width: 100%;
   text-align: center;
   z-index: 10; }
@@ -3119,24 +3137,6 @@ form#user-login, form#user-pass {
 .blog-type-page .views-label-field-categories {
   float: left;
   margin-right: 4px; }
-
-.blog-type-page .field-name-field-call-to-action {
-  background-color: #77BBCD;
-  border-color: #73b5c5;
-  color: white;
-  cursor: pointer;
-  padding: 3px 10px;
-  font-size: 13px;
-  text-align: center;
-  font-weight: normal;
-  border-width: 1px;
-  border-style: solid;
-  display: inline-block;
-  border-radius: 3px;
-  -webkit-box-shadow: #ddd 0 1px 1px;
-          box-shadow: #ddd 0 1px 1px; }
-  .blog-type-page .field-name-field-call-to-action a {
-    color: white; }
 
 .node-type-article-post .field-name-field-featured-image,
 .node-type-panopoly-news-article .field-name-field-featured-image,
