--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -3303,6 +3303,40 @@ form#user-login, form#user-pass {
   .node-type-press-release.panelized-node .pane-node-links .links {
     display: inline-block; }
 
+.pane-news-test-panel-pane-5 .view-content,
+.pane-articles-test-panel-pane-5 .view-content,
+.pane-press-releases-test-panel-pane-5 .view-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap; }
+
+.pane-news-test-panel-pane-5 .views-row,
+.pane-articles-test-panel-pane-5 .views-row,
+.pane-press-releases-test-panel-pane-5 .views-row {
+  display: inline-block;
+  vertical-align: top;
+  width: 230px;
+  margin-right: 10px;
+  margin-bottom: 0.5em;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 240px;
+          flex: 1 240px; }
+
+.pane-news-test-panel-pane-5 .views-field-field-featured-image,
+.pane-articles-test-panel-pane-5 .views-field-field-featured-image,
+.pane-press-releases-test-panel-pane-5 .views-field-field-featured-image {
+  float: left;
+  margin-right: 10px; }
+
+.pane-news-test-panel-pane-5 .views-field-published-at,
+.pane-articles-test-panel-pane-5 .views-field-published-at,
+.pane-press-releases-test-panel-pane-5 .views-field-published-at {
+  font-size: 0.8em; }
+
 /********** OPPA SPANISH STYLE **********/
 @media (min-width: 680px) {
   body.i18n-es .pane-superfish-1 #superfish-1 li a {
