--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -2997,15 +2997,15 @@ form#user-login, form#user-pass {
                     flex: 1 1 300px;
             font-size: 18px;
             min-width: 300px; } }
-        @media (min-width: 906px) {
+        @media (min-width: 956px) {
           .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content .views-row:first-child {
             margin-top: 0;
             margin-bottom: 0.5em; }
           .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content .views-row:last-child {
             margin-top: 0.5em;
             margin-bottom: 0; } }
-        @media (min-width: 1328px) {
-          .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content .views-row {
+        @media (min-width: 1342px) {
+          .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content .views-row:first-child, .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content .views-row:last-child {
             margin: 0 0.5em; } }
         .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content .views-row .featured-image img {
           width: 100%;
