--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3372,7 +3372,7 @@ form#user-login, form#user-pass {
               min-width: 300px;
             }
 
-            @include breakpoint(906px) {
+            @include breakpoint(956px) {
               &:first-child {
                 margin-top: 0;
                 margin-bottom: 0.5em;
@@ -3383,8 +3383,10 @@ form#user-login, form#user-pass {
               }
             }
 
-            @include breakpoint(1328px) {
-              margin: 0 0.5em;
+            @include breakpoint(1342px) {
+              &:first-child, &:last-child{
+                margin: 0 0.5em;
+              }
             }
   
             .featured-image img {
