--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -3196,21 +3196,25 @@ form#user-login, form#user-pass {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-flow: row wrap;
-          flex-flow: row wrap; }
+          flex-flow: row wrap;
+  padding: 0 1em; }
 
 .node-type-article-post .radix-layouts-content,
 .node-type-panopoly-news-article .radix-layouts-content,
 .node-type-panopoly-faq .radix-layouts-content {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 500px;
-          flex: 1 1 500px;
+      -ms-flex: 1 100%;
+          flex: 1 100%;
   padding-right: 0; }
   @media (min-width: 848px) {
     .node-type-article-post .radix-layouts-content,
     .node-type-panopoly-news-article .radix-layouts-content,
     .node-type-panopoly-faq .radix-layouts-content {
-      min-width: 500px;
-      padding-right: 15px; } }
+      -webkit-box-flex: 3;
+          -ms-flex: 3 0 560px;
+              flex: 3 0 560px;
+      min-width: 560px;
+      padding: 0.5em; } }
 
 .node-type-article-post .radix-layouts-sidebar,
 .node-type-panopoly-news-article .radix-layouts-sidebar,
@@ -3224,10 +3228,10 @@ form#user-login, form#user-pass {
     .node-type-article-post .radix-layouts-sidebar,
     .node-type-panopoly-news-article .radix-layouts-sidebar,
     .node-type-panopoly-faq .radix-layouts-sidebar {
-      -webkit-box-flex: 0;
-          -ms-flex: 0 300px;
-              flex: 0 300px;
-      padding-left: 15px; } }
+      -webkit-box-flex: 1;
+          -ms-flex: 1 1 250px;
+              flex: 1 1 250px;
+      padding: 0.5em; } }
 
 .node-type-press-release.panelized-node #content {
   margin-right: 1%;
