Fix sidebar box title display overlapping with box content

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -3023,8 +3023,7 @@ form#user-login, form#user-pass {
           display: -ms-flexbox;
           display: flex; }
           .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content .views-row .views-field-body iframe {
-            max-width: 100%;
-            height: auto; }
+            max-width: 100%; }
       .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content .scroll-pane {
         overflow: auto; }
       .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content .views-field-published-at {
@@ -3439,4 +3438,12 @@ form#user-login, form#user-pass {
   body.i18n-es #block-panels-mini-header.sticky-header #superfish-1 > li a {
     font-size: 14.5px;
     padding: 0 10px; } }
+
+body.i18n-es .sidebar-content .pane-articles-test-panel-pane-2.boxed,
+body.i18n-es .sidebar-content .pane-news-test-panel-pane-2.boxed,
+body.i18n-es .sidebar-content .pane-press-releases-test-panel-pane-2.boxed,
+body.i18n-es .sidebar-content .pane-articles-test-panel-pane-7.boxed,
+body.i18n-es .sidebar-content .pane-news-test-panel-pane-7.boxed,
+body.i18n-es .sidebar-content .pane-press-releases-test-panel-pane-7.boxed {
+  padding-top: 56px; }
 /*# sourceMappingURL=dgr_rubik_style.css.map */
