--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -3439,11 +3439,11 @@ form#user-login, form#user-pass {
     font-size: 14.5px;
     padding: 0 10px; } }
 
-body.i18n-es .sidebar-content .pane-articles-test-panel-pane-2.boxed,
-body.i18n-es .sidebar-content .pane-news-test-panel-pane-2.boxed,
-body.i18n-es .sidebar-content .pane-press-releases-test-panel-pane-2.boxed,
-body.i18n-es .sidebar-content .pane-articles-test-panel-pane-7.boxed,
-body.i18n-es .sidebar-content .pane-news-test-panel-pane-7.boxed,
-body.i18n-es .sidebar-content .pane-press-releases-test-panel-pane-7.boxed {
+body.i18n-es .blog-type-page #main-content .panel-myriad-layout .sidebar-content .pane-articles-test-panel-pane-2.boxed,
+body.i18n-es .blog-type-page #main-content .panel-myriad-layout .sidebar-content .pane-news-test-panel-pane-2.boxed,
+body.i18n-es .blog-type-page #main-content .panel-myriad-layout .sidebar-content .pane-press-releases-test-panel-pane-2.boxed,
+body.i18n-es .blog-type-page #main-content .panel-myriad-layout .sidebar-content .pane-articles-test-panel-pane-7.boxed,
+body.i18n-es .blog-type-page #main-content .panel-myriad-layout .sidebar-content .pane-news-test-panel-pane-7.boxed,
+body.i18n-es .blog-type-page #main-content .panel-myriad-layout .sidebar-content .pane-press-releases-test-panel-pane-7.boxed {
   padding-top: 56px; }
 /*# sourceMappingURL=dgr_rubik_style.css.map */
